# MapConstructor

./: CMakeLists.txt
conf/: geo_convert.xml  ku2022.xml  ku2023.xml  ku2024.xml  map_convert.xml  nc2021.xml  nc2022.xml  nc2023.xml  platform.xml  settings.xml
data/: before_example.g2o  histogram_plot.plt  histogram_plot.txt  ku2022_11_11_SPROX_absproxmatch.csv  ku2022_11_11_absproxmatch.csv  ku2022_11_12_SPROX_absproxmatch.csv  ku2022_11_12_absproxmatch.csv  ku2022_11_13_SPROX_absproxmatch.csv  ku2022_11_13_absproxmatch.csv  ku2022_11_16_SPROX_absproxmatch.csv  ku2022_11_16_absproxmatch.csv  ku2022_11_SPROX_absprox.csv  ku2022_11_SPROX_loc.csv  ku2022_11_absprox.csv  ku2022_11_loc.csv  ku2022_11_prox.csv  ku2022_12_12_SPROX_absproxmatch.csv  ku2022_12_12_absproxmatch.csv  ku2022_12_13_SPROX_absproxmatch.csv  ku2022_12_13_absproxmatch.csv  ku2022_12_14_SPROX_absproxmatch.csv  ku2022_12_14_absproxmatch.csv  ku2022_12_16_SPROX_absproxmatch.csv  ku2022_12_16_absproxmatch.csv  ku2022_12_SPROX_absprox.csv  ku2022_12_SPROX_loc.csv  ku2022_12_absprox.csv  ku2022_12_loc.csv  ku2022_12_prox.csv  ku2022_13_13_SPROX_absproxmatch.csv  ku2022_13_13_absproxmatch.csv  ku2022_13_14_SPROX_absproxmatch.csv  ku2022_13_14_absproxmatch.csv  ku2022_13_16_SPROX_absproxmatch.csv  ku2022_13_16_absproxmatch.csv  ku2022_13_SPROX_absprox.csv  ku2022_13_SPROX_loc.csv  ku2022_13_absprox.csv  ku2022_13_loc.csv  ku2022_13_prox.csv  (+104 more)
data/ku2023/: ku2023_0926_loc.csv  ku2023_0926_loop.csv  ku2023_0926_prox.csv
data/ku2024/: loop.csv
data/ku2024/01/: 2024_0606_104418_loc.csv  2024_0606_104418_prox.csv
data/ku2024/02/: 2024_0606_104928_loc.csv  2024_0606_104928_prox.csv
data/ku2024/03/: 2024_0606_105752_loc.csv  2024_0606_105752_prox.csv
data/ku2024/04/: 2024_0606_110501_loc.csv  2024_0606_110501_prox.csv
data/ku2024/05/: 2024_0606_111532_loc.csv  2024_0606_111532_prox.csv
data/ku2024/06/: 2024_0606_145446_loc.csv  2024_0606_145446_prox.csv
data/ku2024/07/: 2024_0606_151034_loc.csv  2024_0606_151034_prox.csv
data/ku2024/08/: 2024_0606_151615_loc.csv  2024_0606_151615_prox.csv
data/ku2024/09/: 2024_0606_152245_loc.csv  2024_0606_152245_prox.csv
data/ku2024/10/: 2024_0606_153052_loc.csv  2024_0606_153052_prox.csv
doc/: main.tex
doc/sty/: cprotect.sty  heiki.sty  lab_meeting.sty  vec_and_scalar_dobashi_2011_04.sty
gnuplot/: LoopConstraint.txt  PlotPoseGraph.txt  PlotProxPosition.txt  PlotTimeSeriesData.txt  PoseGraph.txt  PoseGraph3D.txt  PoseGraph3D_ku2022.txt  PoseGraph3D_nc2021.txt  ProxPosition.txt  TimeSeriesData.txt  TimeSeriesData3D.txt  UtilityPlot.txt  gnuplotPlatform.txt  platform.txt  plot.plt
include/: base.h  converter.h  g2o_file_io.h  g2o_optimizer.h  gauss_newton.h  map_direction_optimizer.h  map_loader.h  map_optimizer.h  map_saver.h  provisional_task.h  prox_optimizer.h  save_weight_histogram.h  scan_matcher.h  util.h
src/: base.cpp  converter.cpp  g2o_file_io.cpp  g2o_optimizer.cpp  gauss_newton.cpp  main.cpp  map_direction_optimizer.cpp  map_loader.cpp  map_optimizer.cpp  map_saver.cpp  prox_optimizer.cpp  save_weight_histogram.cpp  scan_matcher.cpp  util.cpp
